# bain-wizard-interpreter

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: linters.yml  pypi-publish.yml  python-linters.yml  python-publish.yml  python-tests.yml  release.yml  tests.yml
src/wizard/: errors.py  expr.py  functions.py  interpreter.py  keywords.py  manager.py  runner.py  scriptrunner.py  severity.py  state.py  tweaks.py  value.py
src/wizard/antlr4/: wizard.interp  wizardLexer.interp  wizardLexer.py  wizardLexer.pyi  wizardListener.py  wizardParser.py  wizardParser.pyi  wizardVisitor.py
src/wizard/contexts/: __init__.py  contexts.py  factory.py  keywords.py  utils.py
src/wizard/utils/: __init__.py  error_strategy.py  mappings.py
tests/: test_expr.py  test_interpreter.py  test_runner.py  test_scripts_basic.py  test_scripts_wryebash.py  test_utils.py
tests/data/Better Cities v6.0.13-16513-6-0-13-1590843631/: LICENSE  files.txt  wizard.txt
tests/data/DEMO Wizard 292 SIMPLE Archive Structure-38857-292/: Wizard.txt  (+1 more)
wizard/: __init__.py  abstract_interpreter.py  basic_functions.py  contexts.py  errors.py  expr.py  functions.py  inisettings.py  interpreter.py  keywords.py  manager.py  mappings.py  mmitf.py  runner.py  scriptrunner.py  severity.py  state.py  tweaks.py  utils.py  value.py
wizard/antlr4/: wizard.g4  wizard.interp  wizard.tokens  wizardLexer.interp  wizardLexer.py  wizardLexer.tokens  wizardListener.py  wizardParser.py  wizardVisitor.py
wizard/contexts/: __init__.py  contexts.py  factory.py  keywords.py  utils.py
(+11 files in other folders)
